// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Accessibility should not render hitSlop when onPress is not provided 1`] = `
<View
  accessibilityLabel="Avatar"
  accessibilityRole="image"
  accessible={false}
  style={
    [
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      [
        {
          "alignItems": "center",
          "borderRadius": 999,
          "height": 50,
          "justifyContent": "center",
          "width": 50,
        },
        undefined,
      ],
    ]
  }
  testID="avatar"
>
  <View
    style={
      [
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        [
          {
            "alignItems": "center",
            "borderRadius": 999,
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "backgroundColor": "#F8f9FA",
          },
          false,
        ],
      ]
    }
    testID="avatar.container"
  />
</View>
`;

exports[`Avatar Accessibility should render with hitSlop when onPress is provided 1`] = `
<View
  accessibilityLabel="Avatar"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={
    {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderRadius": 999,
      "height": 50,
      "justifyContent": "center",
      "opacity": 1,
      "width": 50,
    }
  }
  testID="avatar"
>
  <View
    style={
      [
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        [
          {
            "alignItems": "center",
            "borderRadius": 999,
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "backgroundColor": "#F8f9FA",
          },
          false,
        ],
      ]
    }
    testID="avatar.container"
  />
</View>
`;
